# obsidian-memory

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  deploy.sh  dist-workspace.toml  package-lock.json  package.json  test-embeddings.js  tsconfig.base.json
.claude/: settings.local.json
.github/: build-setup.yml
.github/workflows/: docker.yml  release.yml
crates/auth-service/: Cargo.toml  Dockerfile
crates/auth-service/src/: config.rs  main.rs  storage.rs  validation.rs
crates/auth-service/src/oauth/: authorize.rs  metadata.rs  mod.rs  registration.rs  token.rs
crates/auth-service/src/passkey/: html.rs  login.rs  mod.rs  setup.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: config.rs  main.rs  watcher.rs
crates/mcp-server/src/embeddings/: download.rs  manager.rs  mod.rs
crates/mcp-server/src/graph/: index.rs  mod.rs  pagerank.rs
crates/mcp-server/src/projects/: discovery.rs  messages.rs  mod.rs
crates/mcp-server/src/storage/: file.rs  mod.rs  traits.rs  whitelist.rs
crates/mcp-server/src/tools/: common.rs  delete_note.rs  edit_note.rs  get_note.rs  get_note_info.rs  get_weekly_note_info.rs  load_private_memory.rs  log.rs  mod.rs  read_note.rs  reflect.rs  remember.rs  search.rs  update_frontmatter.rs  write_logs.rs  write_note.rs
crates/memory/: Cargo.toml
crates/memory/src/: main.rs  watcher.rs
crates/memory/src/embeddings/: download.rs  manager.rs
crates/memory/src/projects/: types.rs
crates/memory/src/storage/: content_hash.rs  mod.rs  whitelist.rs
crates/memory/src/tools/: common.rs  edit_note.rs  log.rs  mod.rs  move_note.rs  read_note.rs  update_frontmatter.rs  write_note.rs
crates/obsidian-fs/src/: frontmatter.rs  lib.rs
crates/semantic-embeddings/: Cargo.toml
crates/semantic-embeddings/src/: embedded.rs  embedding.rs  lib.rs  model.rs
crates/semantic-embeddings/tests/: basic_functionality.rs
crates/sync-core/: Cargo.toml
crates/sync-core/src/: document.rs  events.rs  fs.rs  handshake.rs  lib.rs  markdown.rs  peer_id.rs  peers.rs  sync.rs  sync_engine.rs  transport.rs  vault.rs
crates/sync-core/src/protocol/: encoding.rs  envelope.rs  handshake.rs  mod.rs
crates/sync-core/src/swim/: buddy.rs  failure.rs  membership.rs  messages.rs  mod.rs
crates/sync-daemon/: Cargo.toml
crates/sync-daemon/src/: connection.rs  lib.rs  main.rs  manager.rs  message.rs  native_fs.rs  outgoing.rs  persistence.rs  server.rs  watcher.rs
crates/sync-daemon/tests/: e2e.rs
crates/sync-wasm/: Cargo.toml
crates/sync-wasm/src/: fs_bridge.rs  lib.rs
docker/: .env.example  Caddyfile  Dockerfile  Dockerfile.auth  Dockerfile.memory  Dockerfile.sync  docker-compose.yml
docs/: cloud-sync-plan.md
plugin/: .gitignore  esbuild.config.mjs  main.js  manifest.json  meta.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts  ws-server.js
plugin/src/: VaultOperationQueue.ts  logger.ts  main.ts  wasm-binary.d.ts  wasm.ts
plugin/src/fs/: ObsidianFs.ts
plugin/src/network/: PeerManager.ts  WebSocketClient.ts  WebSocketServer.ts  index.ts  ws-server.d.ts
plugin/src/views/: DebugDashboard.svelte  DebugModal.ts  SyncPanel.svelte  SyncView.ts
plugin/tests/: MockVault.test.ts  PeerManager.test.ts  SyncScenarios.test.ts
plugin/tests/mocks/: MockVault.ts  MockWebSocket.ts  obsidian.ts
scripts/: download-model.sh
specs/: peer-discovery.feature
