[workspace]
resolver = "2"
members = [
    "crates/mcp-server",
    "crates/wiki-links",
    "crates/obsidian-fs",
    "crates/semantic-embeddings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Michael Mullins"]
license = "MIT"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
