[workspace]
resolver = "2"
members = [
    "crates/memory",
    "crates/wiki-links",
    "crates/obsidian-fs",
    "crates/semantic-embeddings",
    "crates/auth-service",
    "crates/sync-core",
    "crates/sync-daemon",
    "crates/sync-wasm",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Michael Mullins"]
license = "Apache-2.0"
repository = "https://github.com/webdesserts/obsidian-memory"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CRDT (for sync crates)
loro = "1.10"

# Serialization (for sync crates)
serde_yaml = "0.9"
bincode = "1.3"

# Error handling
thiserror = "2"

# WASM (for sync-wasm)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

# Testing
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
