[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OAuth 2.1 + API key authentication service for obsidian-memory"

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OAuth
oxide-auth = "0.6"
oxide-auth-axum = "0.5"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
url = "2"
