[package]
name = "obsidian-memory-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/webdesserts/obsidian-memory"
homepage = "https://github.com/webdesserts/obsidian-memory"
description = "MCP server for Obsidian memory integration with Claude"

[[bin]]
name = "obsidian-memory"
path = "src/main.rs"

[features]
default = ["download-model"]
# Download model from HuggingFace at runtime (default for dev)
download-model = ["dep:reqwest", "dep:futures-util"]
# Use model embedded in binary (for release builds)
embedded-model = ["semantic-embeddings/embedded-model"]
# Enable HTTP transport for remote MCP server
http = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:clap"]

[dependencies]
# MCP SDK
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }

# HTTP server (optional, for HTTP transport)
axum = { version = "0.8", optional = true }

# CLI argument parsing (optional, for HTTP transport)
clap = { version = "4", features = ["derive"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JSON Schema for tool parameters
schemars = "1.0"

# URL encoding
urlencoding = "2.1"

# Platform directories (home dir, etc.)
dirs = "6"

# Workspace crates
wiki-links = { path = "../wiki-links" }
obsidian-fs = { path = "../obsidian-fs" }

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# HTTP client for model downloads (optional, only needed without embedded-model)
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }

# Hashing for cache keys
sha2 = "0.10"
hex = "0.4"

# Semantic embeddings
semantic-embeddings = { path = "../semantic-embeddings" }

# Regex for parsing wiki-links
regex = "1"

# Lazy static initialization
once_cell = "1.21"

# Async traits
async-trait = "0.1"

# Random number generation
rand = "0.9"

[dev-dependencies]
tempfile = "3"
