[package]
name = "semantic-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic embedding generation using sentence transformers"

[lib]
crate-type = ["rlib"]

[features]
debug = ["log", "env_logger", "ctor"]
# Embed model files directly in binary (for release builds)
embedded-model = []

[dependencies]
# Candle for ML inference
candle-core = { version = "0.8", features = [] }
candle-nn = "0.8"
candle-transformers = "0.8"

# Tokenizer
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging (optional, enabled via debug feature)
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
ctor = { version = "0.2", optional = true }

[dev-dependencies]
once_cell = "1.20"
toml = "0.8"
