[package]
name = "sync-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sync-daemon"
path = "src/main.rs"

[dependencies]
sync-core = { path = "../sync-core" }
tokio.workspace = true
bincode.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# File watching (notify v8 for workspace compatibility with obsidian-memory)
notify = "8"
notify-debouncer-mini = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }

# Networking (WebSocket)
tokio-tungstenite = "0.24"

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
