[package]
name = "sync-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sync-core = { path = "../sync-core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
console_error_panic_hook = "0.1"
# getrandom 0.3 is pulled in transitively by ahash -> quick_cache -> loro-kv-store.
# The wasm_js feature is required for WASM compilation.
getrandom_0_3.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
